examples/ruby/server_infra/docker/base/build/conf/envoy/envoy.yaml
node:
  # Used for health check identity verification and other features
  # https://www.envoyproxy.io/docs/envoy/v1.12.0/intro/arch_overview/upstream/health_checking#health-check-identity
  cluster: greeter_server
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 3001
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                codec_type: auto
                stat_prefix: ingress_grpc
                access_log:
                  - name: envoy.file_access_log
                    config:
                      path: "/proc/1/fd/1"
                route_config:
                  name: ingress_grpc_route
                  virtual_hosts:
                    - name: local_server_backend
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                            grpc: {}
                          route:
                            cluster: local_server
                            timeout: 60s
                http_filters:
                  - name: envoy.router
                    typed_config: {}
  clusters:
    - name: local_server
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      http2_protocol_options: {}
      load_assignment:
        cluster_name: local_server
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 50061
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
